# WWH_Company-Synergizer

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json  turbo.json
apps/portal/: .eslintrc.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/portal/app/: globals.css  layout.tsx  page.tsx
apps/portal/app/dashboard/: page.tsx
apps/portal/app/intake/: page.tsx  wizard.tsx
apps/portal/components/ui/: badge.tsx  (+7 more)
apps/portal/config/: policy.default.json
apps/portal/lib/: schema.ts  utils.ts
apps/portal/server/: auth.ts
apps/portal/tests/: llm.compileProfile.test.ts  llm.generatePlaybook.test.ts  server.actions.test.ts
data/: templates.json
docs/: system_overview.md
prisma/: schema.prisma  seed.ts
prisma/migrations/20240520120000_init/: migration.sql
scripts/sql/: rls.sql
services/: __init__.py
services/graph/: README.md  __init__.py  engine.py  main.py  pyproject.toml
services/graph/data/: sample_profiles.json
services/graph/src/services/: __init__.py
services/graph/src/services/graph/: __init__.py  main.py
services/graph/src/synergizer/: analysis.py  api.py  cli.py  models.py  narrative.py  reporting.py  storage.py  templates.py  utils.py
services/graph/src/synergizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/graph/tests/: TEST_PLAN.md  TEST_PLAN_TABLE.md  test_analysis.py  test_api.py  test_cli.py  test_models.py  test_narrative.py  test_storage.py  test_templates.py
src/synergizer/: __init__.py  cli.py  models.py  templates.py  utils.py
tests/: test_analysis.py
(+9 files in other folders)
