[project]
name = "synergizer"
version = "0.1.0"
description = "AI-assisted synergy orchestration toolkit for WWH multi-company collaborations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Snake Stack Games LLC"},
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
